Application mobile fixes

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -46,8 +46,6 @@ main {
 	top: 3vw;
 	left: 10px;
 
-	margin-top: 4rem;
-
 	width: calc(100% - 20px);
 	max-height: calc(100vh - 3vw);
 	overflow-y: scroll;
@@ -256,20 +254,8 @@ main {
 
 #summary-page {
 	max-width: 1040px;
-	max-height: 100vh;
-
-	overflow-y: auto;
-
 	left: 50%;
-
-	margin-top: 0;
-	padding-bottom: 3rem;
 	transform: translateX(-50%);
-
-	h1 {
-		margin-bottom: 0.25rem;
-	}
-
 	p {
 		text-align: left;
 		font-size: 2rem;
