--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -62,8 +62,8 @@ img {
     top: 0;
     left: 0;
     color: white;
-    font-size: 3rem;
-    padding: 1rem;
+    font-size: 2.5rem;
+    padding: 0.75rem;
 
     cursor: pointer;
   }
@@ -79,6 +79,11 @@ img {
   @media screen and (min-width: 768px) {
     max-width: 440px;
     height: 100vh;
+
+    .fa {
+      font-size: 3rem;
+      padding: 1rem;
+    }
 
     &.hidden {
       left: -440px;
